welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:4: error: illegal start of simple expression
  } else if ( a==b && b==c)[
                           ^